--- a/resources/js/assets/styles/global.css
+++ b/resources/js/assets/styles/global.css
@@ -2,31 +2,33 @@
     --font-style: Roboto;
     --font-color: #394867;
     --var-light: #ffffff;
-  }
-  
-  html,
-  body {
+}
+
+html,
+body {
     background: #394867 !important;
     height: 100%;
     margin: 0;
-  }
-  
-  .material-symbols-outlined {
-    font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 48
-  }
-  
-  .login-wrap {
+}
+
+#app {
+    font-family: Avenir, Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: #2c3e50;
+    height: 100%;
+}
+
+/* Login */
+
+.login-wrap {
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .login-container {
+}
+
+.login-container {
     width: 421px;
     height: 385px;
     background: #ffffff;
@@ -36,42 +38,15 @@
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
-  }
-  
-  select {
-    background: #ffffff;
-    border: none !important;
-    padding: 0 !important;
-    font-size: 20px !important;
-    font-weight: 400;
-    line-height: 23px !important;
-    font-family: var(--font-style) !important;
-    color: var(--font-color);
-  }
-  
-  .form-select option {
-    padding: 10px;
-  }
-  
-  select:focus-visible, select:focus {
-    border: none !important;
-    outline: none !important;
-    box-shadow: none !important;
-  }
-  
-  option[value=""][disabled] {
-    display: none;
-  }
-  
-  option {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 23px;
-    font-family: var(--font-style);
-  }
-  
-  .google-method, .select-dropdown {
+}
+
+.login-container img {
+    width: 224px;
+    height: 87px;
+}
+
+.google-login,
+.select-dropdown {
     background: #ffffff;
     border: 1px solid rgba(0, 0, 0, 0.36);
     border-radius: 30px;
@@ -80,47 +55,260 @@
     display: flex;
     align-items: center;
     padding: 0 16px;
-  }
-  
-  .google-method img {
-      width: 33px;
-      height: 33px;
-  }
-  
-  .method-text {
-      color: var(--font-color);
-      font-size: 20px;
-      font-weight: 400;
-      line-height: 23px;
-      font-family: var(--font-style);
-      text-decoration: none;
-      margin-left: 12px;
-  }
-  
-  .header-container {
-      background: white;
-      display: flex;
-      height: 100px;
-      background: #FFFFFF;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      border-radius: 0px 0px 20px 20px;
-      padding: 0 16px;
-      align-items: center;
-      justify-content: space-between;
-  }
-  
-  .noti-container {
-      display: flex;
-      align-items: center;
-  }
-  
-  .noti-container span {
-      font-size: 40px;
-      padding: 0 16px;
-  }
-  
-  .noti-container img {
-      width: 40px;
-      height: 40px;
-      border-radius: 100%;
-  }
+}
+
+.google-login img {
+    width: 33px;
+    height: 33px;
+    margin-right: 10px;
+}
+
+.login-text {
+    color: var(--font-color);
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 23px;
+    font-family: var(--font-style);
+    text-decoration: none;
+    padding: 6px 12px;
+    display: flex;
+    align-items: center;
+}
+
+select {
+    border: none !important;
+    font-size: 20px !important;
+    line-height: 23px !important;
+    font-family: var(--font-style) !important;
+    color: var(--font-color) !important;
+    height: 90%;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+.form-select {
+    background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3C!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools --%3E%3Csvg width='800px' height='800px' viewBox='0 -0.5 17 17' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' class='si-glyph si-glyph-triangle-down'%3E%3Ctitle%3E1237%3C/title%3E%3Cdefs%3E%3C/defs%3E%3Cg stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cpath d='M10.106,12.69 C9.525,13.27 8.584,13.27 8.002,12.69 L1.561,6.246 C0.979,5.665 0.722,4.143 2.561,4.143 L15.549,4.143 C17.45,4.143 17.131,5.664 16.549,6.246 L10.106,12.69 L10.106,12.69 Z' fill='%23434343' class='si-glyph-fill'%3E%3C/path%3E%3C/g%3E%3C/svg%3E") !important;
+    background-size: 25px !important;
+}
+
+.form-select option {
+    padding: 10px;
+}
+
+select:focus-visible,
+select:focus {
+    border: none !important;
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+option {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    font-family: var(--font-style);
+}
+
+/*End Login*/
+
+/*Header*/
+.header-container {
+    background: white;
+    display: flex;
+    /* height: 100px; */
+    background: #ffffff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 0px 0px 20px 20px;
+    padding: 0 16px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.noti-container {
+    display: flex;
+    align-items: center;
+}
+
+.noti-container svg {
+    width: 33px;
+    height: 33px;
+    margin: 0 16px;
+}
+
+.noti-container img {
+    width: 36px;
+    height: 36px;
+    border-radius: 100%;
+}
+
+.account-info {
+  display: flex !important;
+  padding: 20px !important;
+}
+
+.account-info:active {
+  background: #fff !important;
+  color: var(--font-color) !important;
+}
+
+.account-info:hover {
+  border-radius: 0.375rem;
+}
+
+.account-name {
+  margin: 0 20px !important;
+  display: flex !important;
+  align-items: center !important;
+  font-size: 20px !important;
+  font-weight: 400 !important;
+  line-height: 23px !important;
+  font-family: var(--font-style) !important;
+}
+
+.dropdown-menu.dropdown-menu-end {
+  width: 360px;
+  padding: 0;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  margin-top: 30px !important;
+}
+
+.account-logout {
+  background: #394867 !important;
+  color: #fff !important;
+  padding: 10px 40px !important;
+  text-align: center !important;
+  font-size: 20px !important;
+  font-weight: 400 !important;
+  line-height: 23px !important;
+  font-family: var(--font-style) !important;
+}
+
+.account-logout:hover {
+  background: #394867;
+  color: #fff;
+}
+/*End Header*/
+
+/*Home*/
+.main-container {
+  display: flex;
+  justify-content: center;
+}
+
+.main-wrap {
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.11);
+  box-shadow: inset 0px 10px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 50px 50px 0px 0px;
+  /* border-radius: 50px; */
+  width: 1000px;
+  /* height: max-content; */
+  height: 800px;
+  margin-top: 50px;
+}
+
+.infomation-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 30px;
+}
+
+.infomation-container img {
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+}
+
+.info-wrap {
+  display: flex;
+  align-items: center;
+}
+
+.info-title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 39px;
+  color: var(--font-color);
+  margin: 50px 30px 10px;
+}
+
+.info-name,
+.info-mail,
+.info-time {
+  margin-right: 20px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 39px;
+  color: var(--font-color);
+}
+
+.info-mail {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.info-time {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.mail-wrap {
+  margin: 20px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.nav-wrap {
+  margin-left: 20px;
+}
+
+.nav-wrap button {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  margin-right: 16px;
+  /* margin-bottom: 30px; */
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border: none;
+  border-radius: 30px;
+  width: 150px;
+  height: 40px;
+}
+
+/*End Home*/
+
+/*Modal*/
+.modal-content {
+  background: #ffffff !important;
+  border: 1px solid #000000 !important;
+  border-radius: 50px !important;
+  height: 120px;
+}
+
+.modal-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23px;
+  font-family: var(--font-style);
+}
+
+.modal-body svg {
+  margin-right: 10px;
+}
+/*End Modal*/
