--- a/resources/js/assets/styles/global.css
+++ b/resources/js/assets/styles/global.css
@@ -356,6 +356,29 @@ option {
     height: 40px;
 }
 
+.nav-wrap-after {
+    display: flex;
+    margin: 0 30px;
+    align-items: center;
+}
+
+.nav-wrap-after-text {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    margin-left: 10px;
+}
+
+.nav-wrap-after-text.rejected {
+    color: #DC3545;
+}
+
+.nav-wrap-after-text.accepted {
+    color: #4EBF19;
+}
+
 @media screen and (max-width: 768px) {
     .main-wrap {
         width: 90%;
