--- a/resources/js/assets/styles/global.css
+++ b/resources/js/assets/styles/global.css
@@ -28,13 +28,13 @@ body {
 }
 
 .login-container {
-    width: 421px;
-    height: 385px;
+    width: 360px;
+    height: 320px;
     background: #ffffff;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
     border-radius: 100px 20px;
     display: flex;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     align-items: center;
     flex-direction: column;
 }
@@ -42,6 +42,7 @@ body {
 .login-container img {
     width: 224px;
     height: 87px;
+    margin: 2rem 0;
 }
 
 .google-login,
@@ -49,24 +50,28 @@ body {
     background: #ffffff;
     border: 1px solid rgba(0, 0, 0, 0.36);
     border-radius: 30px;
-    width: 300px;
-    height: 60px;
+    width: 260px;
+    height: 48px;
     display: flex;
     align-items: center;
     padding: 0 16px;
 }
 
+.select-dropdown {
+    margin: 0 0 1rem;
+}
+
 .google-login img {
-    width: 33px;
-    height: 33px;
-    margin-right: 10px;
+    width: 30px;
+    height: 30px;
+    margin: 0 0.5rem 0 0;
 }
 
 .login-text {
     color: var(--font-color);
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
-    line-height: 23px;
+    line-height: 20px;
     font-family: 'Roboto', sans-serif;
     text-decoration: none;
     padding: 6px 12px;
@@ -76,11 +81,11 @@ body {
 
 select {
     border: none !important;
-    font-size: 20px !important;
-    line-height: 23px !important;
+    font-size: 18px !important;
+    line-height: 20px !important;
     font-family: 'Roboto', 'san-serif' !important;
     color: var(--font-color) !important;
-    height: 90%;
+    height: 100%;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -88,11 +93,11 @@ select {
 
 .form-select {
     background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3C!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools --%3E%3Csvg width='800px' height='800px' viewBox='0 -0.5 17 17' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' class='si-glyph si-glyph-triangle-down'%3E%3Ctitle%3E1237%3C/title%3E%3Cdefs%3E%3C/defs%3E%3Cg stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cpath d='M10.106,12.69 C9.525,13.27 8.584,13.27 8.002,12.69 L1.561,6.246 C0.979,5.665 0.722,4.143 2.561,4.143 L15.549,4.143 C17.45,4.143 17.131,5.664 16.549,6.246 L10.106,12.69 L10.106,12.69 Z' fill='%23434343' class='si-glyph-fill'%3E%3C/path%3E%3C/g%3E%3C/svg%3E") !important;
-    background-size: 25px !important;
+    background-size: 1rem !important;
 }
 
 .form-select option {
-    padding: 10px;
+    padding: 10px !important;
 }
 
 select:focus-visible,
@@ -105,8 +110,8 @@ select:focus {
 option {
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
-    line-height: 23px;
+    font-size: 18px;
+    line-height: 20px;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -126,7 +131,7 @@ option {
         padding: 0 8px;
     }
     .form-select {
-        background-size: 20px !important;
+        background-size: 1rem !important;
         font-size: 18px !important;
     }
     select {
@@ -161,6 +166,11 @@ option {
     padding: 0 16px;
     align-items: center;
     justify-content: space-between;
+}
+
+.header-container img {
+    width: 180px;
+    height: 70px;
 }
 
 .noti-container {
@@ -208,7 +218,7 @@ option {
     width: 360px;
     padding: 0;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    margin-top: 30px !important;
+    margin-top: 24px !important;
 }
 
 .account-logout {
@@ -228,19 +238,13 @@ option {
 }
 
 @media screen and (max-width: 768px) {
-    .header-container img {
-        width: 179px;
-        height: 70px;
-        /* width: 50%; */
-        /* height: 60%; */
-    }
+
     .noti-container img {
         width: 36px;
         height: 36px;
     }
     .dropdown-menu.dropdown-menu-end {
         width: 260px;
-        margin-top: 24px !important;
     }
     .account-info {
         padding: 10px 16px !important;
