--- a/resources/js/assets/styles/global.css
+++ b/resources/js/assets/styles/global.css
@@ -12,23 +12,33 @@ body {
             rgba(0, 146, 255, 1) 100%
         )
         no-repeat;
-    height: 100%;
+    /* height: 100%; */
+    padding: 0;
     margin: 0;
 }
+
+html {
+    min-height: 100vh;
+}
+
+/* body {
+    display: flex;
+    flex-direction: column;
+} */
 
 #app {
     font-family: Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: #2c3e50;
-    height: 100%;
+    min-height: 100vh;
 }
 
 /* Login */
 
 .login-wrap {
     height: 100%;
-    /* min-height: 100vh; */
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -301,7 +311,7 @@ option {
     width: 1000px;
     height: max-content;
     margin-top: 2rem;
-    /* margin-bottom: 2rem; */
+    margin-bottom: 2rem;
     padding: 2rem;
 }
 
@@ -327,12 +337,15 @@ option {
     font-family: "Roboto";
     font-style: normal;
     font-weight: 700;
-    font-size: 1.8rem;
-    line-height: 36px;
+    font-size: 1.6rem;
+    line-height: 30px;
     color: var(--font-color);
-    /* margin: 50px 30px 10px; */
     display: flex;
     align-items: center;
+}
+
+.info-name-mail {
+    display: flex;
 }
 
 .info-name {
@@ -352,6 +365,10 @@ option {
 .info-mail {
     font-size: 1.1rem;
     margin: 0 6px;
+}
+
+.info-party {
+    font-size: .9rem;
 }
 
 .info-time {
@@ -417,12 +434,18 @@ option {
 }
 
 .btn-back {
-    width: 50px;
-    padding: 0 0.5rem 0 0 !important;
+    width: 40px;
+    height: 40px;
+    padding: 0 !important;
+    margin-right: .5rem;
+}
+
+.btn-back:hover {
+    background-color: #a5a5a5;
 }
 
 .btn-back svg {
-    width: 2rem;
+    width: 1.5rem;
     height: 1.5rem;
     color: var(--font-color);
 }
@@ -431,6 +454,9 @@ option {
     .main-wrap {
         width: 90%;
         /* height: 100vh; */
+    }
+    .info-wrap {
+        align-items: initial;
     }
     .info-title {
         font-size: 28px;
@@ -442,13 +468,30 @@ option {
         justify-content: initial;
         align-items: initial;
     }
+    .info-name-mail {
+        flex-direction: column;
+
+    }
+    .info-name-mail-party {
+        width: calc(100% - 60px);
+    }
     .info-name,
     .info-mail,
     .info-time {
-        font-size: 22px;
-        line-height: 32px;
+        font-size: 20px;
+        line-height: 28px;
         color: var(--font-color);
+        margin: 0;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
     }
+    /* .info-mail {
+        margin: 0;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+    } */
     .info-mail,
     .info-time {
         font-size: 16px;
@@ -474,6 +517,9 @@ option {
     .nav-wrap-after-text {
         font-size: 18px;
     }
+    /* body, html {
+        height: 100% !important;
+    } */
 }
 
 /*End Home*/
@@ -595,6 +641,7 @@ td img {
     width: 50% !important;
     margin-left: 1.5rem;
     margin-bottom: 1.5rem;
+    margin-top: -.5rem;
 }
 
 .input-group input {
@@ -685,6 +732,7 @@ td img {
 
     .input-group {
         margin: 0 1rem 1rem;
+        width: initial !important;
     }
 
     td {
@@ -729,12 +777,13 @@ td img {
     }
 
     .table-responsive {
-        height: 100%;
+        /* height: 100%; */
+        height: 500px;
     }
 
-    body, html {
+    /* body, html {
         height: auto;
-    }
+    } */
 }
 
 /* End List */
@@ -749,7 +798,7 @@ td img {
   } */
 
   .spinner-wrap {
-    height: calc(100vh - 70px);
+    height: calc(100vh - 80px);
     align-items: center;
     display: flex;
     flex-direction: column;
