--- a/resources/js/assets/styles/global.css
+++ b/resources/js/assets/styles/global.css
@@ -3,6 +3,8 @@
     --var-light: #ffffff;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+
 html,
 body {
     background: rgb(242, 124, 33);
@@ -82,7 +84,7 @@ html {
     font-size: 18px;
     font-weight: 400;
     line-height: 20px;
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     text-decoration: none;
     padding: 6px 12px;
     display: flex;
@@ -93,7 +95,7 @@ select {
     border: none !important;
     font-size: 18px !important;
     line-height: 20px !important;
-    font-family: "Roboto", "san-serif" !important;
+    font-family: 'Roboto Condensed', sans-serif !important;
     color: var(--font-color) !important;
     height: 100%;
     -webkit-appearance: none;
@@ -122,7 +124,7 @@ option {
     font-weight: 400;
     font-size: 18px;
     line-height: 20px;
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 @media screen and (max-width: 768px) {
@@ -236,7 +238,7 @@ option {
     font-size: 18px;
     font-weight: 500;
     line-height: 23px;
-    font-family: "Roboto", "san-serif";
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .account-email {
@@ -258,7 +260,7 @@ option {
     font-size: 20px !important;
     font-weight: 400 !important;
     line-height: 23px !important;
-    font-family: "Roboto", sans-serif !important;
+    font-family: 'Roboto Condensed', sans-serif !important;
 }
 
 .account-logout:hover {
@@ -306,22 +308,34 @@ option {
 
 .main-wrap {
     background: #ffffff;
-    border: 1px solid rgba(0, 0, 0, 0.11);
+    /* border: 1px solid rgba(0, 0, 0, 0.11); */
     /* box-shadow: 20px 20px 5px 0px rgba(0, 0, 0, 0.25); */
     border-radius: 1rem;
     /* border-top-left-radius: 0;
     border-top-right-radius: 0; */
-    width: 90%;
+    width: 80%;
     height: max-content;
     margin-top: 2rem;
     margin-bottom: 2rem;
-    padding: 2rem;
+    /* padding: 2rem; */
+}
+
+.navigation-wrap {
+    background-color: #e6e6e6;
+    padding: 0.5rem 1rem;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    display: flex;
+}
+
+.infomation-wrap {
+    padding: 1rem;
 }
 
 .infomation-container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     margin: 1rem 0;
 }
 
@@ -337,14 +351,15 @@ option {
 }
 
 .info-title {
-    font-family: "Roboto";
+    font-family: 'Roboto Condensed', sans-serif;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     font-size: 1.6rem;
     line-height: 30px;
     color: var(--font-color);
-    display: flex;
-    align-items: center;
+    /* display: flex;
+    align-items: center; */
+    padding: 0 60px;
 }
 
 .info-name-mail {
@@ -358,7 +373,7 @@ option {
 .info-name,
 .info-mail,
 .info-time {
-    font-family: "Roboto";
+    font-family: 'Roboto Condensed', sans-serif;
     font-style: normal;
     font-size: 1.3rem;
     line-height: 36px;
@@ -366,12 +381,15 @@ option {
 }
 
 .info-mail {
-    font-size: 1.1rem;
     margin: 0 6px;
 }
 
-.info-party {
+.info-party,
+.info-time,
+.info-mail {
     font-size: 0.9rem;
+    font-weight: 400;
+    opacity: 0.8;
 }
 
 .info-party .badge {
@@ -379,46 +397,51 @@ option {
     background-color: #0063b0;
 }
 
-.info-time {
+/* {
     font-size: 1.1rem;
     font-weight: 500;
-}
+} */
 
 .mail-wrap {
-    font-family: "Roboto";
+    font-family: 'Roboto Condensed', sans-serif;
     font-style: normal;
     font-size: 1.2rem;
     line-height: 24px;
-    padding: 0 60px;
+    /* padding: 0 3.75rem; */
+    padding: 2rem 1rem;
+    margin: 0 3.75rem;
+    border: 1px solid rgba(57, 72, 103, 0.3);
+    border-radius: 0.5rem;
 }
 
-.nav-wrap {
-    padding: 2rem 0 0 0;
+.process-wrap {
+    padding: 1rem 4.75rem 2rem;
 }
 
-.nav-wrap button {
-    font-family: "Roboto";
+.process-wrap button {
+    font-family: 'Roboto Condensed', sans-serif;
     font-style: normal;
     font-weight: 500;
-    font-size: 1.2rem;
-    line-height: 24px;
-    margin-right: 16px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-size: 1.1rem;
+    /* line-height: 1.2rem; */
+    margin-right: 8px;
+    /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
     border: none;
     border-radius: 2rem;
-    width: 150px;
+    width: fit-content;
     height: 40px;
+    padding: 0 1rem;
 }
 
-.nav-wrap-after#accepted,
-.nav-wrap-after#rejected {
+.process-wrap-after#accepted,
+.process-wrap-after#rejected {
     display: flex;
-    padding: 1.2rem 0 0 0;
+    padding: 1rem 4.75rem 2rem;
     align-items: center;
 }
 
-.nav-wrap-after-text {
-    font-family: "Roboto";
+.process-wrap-after-text {
+    font-family: 'Roboto Condensed', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
@@ -426,11 +449,11 @@ option {
     margin-left: 0.5rem;
 }
 
-.nav-wrap-after-text.rejected {
+.process-wrap-after-text.rejected {
     color: #dc3545;
 }
 
-.nav-wrap-after-text.accepted {
+.process-wrap-after-text.accepted {
     color: #4ebf19;
 }
 
@@ -442,17 +465,18 @@ option {
 }
 
 .btn-back {
-    width: fit-content;
-    height: fit-content;
-    padding: .5rem 0 !important;
-    margin-top: -1rem;
-    display: flex !important;
+    /* width: fit-content;
+    height: fit-content; */
+    /* padding: .5rem 0 !important; */
+    /* margin-top: -1rem; */
+    display: flex;
     align-items: center;
     text-decoration: none;
     cursor: pointer;
+    margin-right: 1rem;
 }
-
-/* .btn-back:hover {
+/* 
+.btn-back:hover {
     background-color: #a5a5a5;
 } */
 
@@ -463,7 +487,7 @@ option {
 }
 
 .btn-back span {
-    font-family: "Roboto";
+    font-family: 'Roboto Condensed', sans-serif;
     /* font-style: normal; */
     font-weight: 700;
     font-size: 1.1rem;
@@ -482,9 +506,13 @@ option {
     }
     .info-title {
         /* font-size: 28px; */
-        line-height: 2rem;
+        /* line-height: 2rem; */
         align-items: flex-end;
+        padding: initial;
     }
+    /* .infomation-wrap {
+        padding: 1rem 0;
+    } */
     .infomation-container {
         flex-direction: column;
         justify-content: initial;
@@ -525,41 +553,49 @@ option {
         font-weight: 500;
         font-size: 1rem;
         line-height: initial;
+        margin-top: 1rem;
     }
     .mail-wrap {
-        padding: 0;
+        margin: 0;
         font-size: 18px;
         line-height: normal;
         word-wrap: break-word;
     }
-    .nav-wrap {
-        /* margin: 0 20px; */
-        display: flex;
+    .process-wrap {
+        /* display: flex; */
+        /* justify-content: space-evenly; */
+        padding: 1rem 1rem 2rem;
     }
-    .nav-wrap button {
+    .process-wrap button {
         font-size: 18px;
         line-height: normal;
+        /* margin: initial; */
     }
-    .nav-wrap-after svg {
+    .process-wrap-after#accepted,
+    .process-wrap-after#rejected {
+        padding: 1rem 1rem 2rem;
+    }
+    .process-wrap-after svg {
         width: 2rem;
         height: 2rem;
     }
-    .nav-wrap-after-text {
+    .process-wrap-after-text {
         font-size: 18px;
     }
     .btn-back {
         margin: initial;
-        padding: 0 0 .5rem !important;
+        /* padding: 0 0 .5rem !important; */
     }
 }
 /*End Home*/
 
 /*Modal*/
 .modal-content {
-    background: #ffffff !important;
-    border: 1px solid #000000 !important;
-    border-radius: 50px !important;
-    height: 120px;
+    background: #fff;
+    /* border: 1px solid #000000 !important; */
+    border-radius: 1.6rem;
+    height: fit-content;
+    width: 400px;
 }
 
 .modal-body {
@@ -569,7 +605,7 @@ option {
     font-size: 20px;
     font-weight: 400;
     line-height: 23px;
-    font-family: "Roboto";
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .modal-body svg {
@@ -578,13 +614,13 @@ option {
 
 @media screen and (max-width: 768px) {
     .modal-content {
-        height: 100px;
-        margin: 0 24px;
+        height: fit-content;
+        margin: 0 2rem;
     }
-    .modal-body {
+    /* .modal-body {
         font-size: 18px;
         line-height: normal;
-    }
+    } */
     .modal-body svg {
         height: 33px;
         width: 33px;
@@ -664,19 +700,25 @@ td img {
 
 .input-group {
     /* padding: 0; */
-    border-radius: 30px;
-    border: 1px solid #ced4da;
+    border-radius: 1rem;
+    /* border: 1px solid #ced4da; */
     align-items: center !important;
     padding: 0 16px;
     width: 50% !important;
-    margin-left: 1.5rem;
-    margin-bottom: 1.5rem;
-    margin-top: -0.5rem;
+    /* margin-left: 1.5rem; */
+    margin-bottom: 1rem;
+    /* margin-top: -0.5rem; */
+    background-color: rgba(241, 243, 244, 0.24);
+}
+
+.input-group.focused {
+    background-color: #fff;
 }
 
 .input-group input {
     border: none;
     padding: 6px 0;
+    background-color: transparent;
 }
 
 .input-group input:focus,
@@ -684,10 +726,26 @@ td img {
     border: none;
     outline: none;
     box-shadow: none;
+    background-color: transparent;
+}
+
+.input-group input::placeholder,
+.input-group input.typed {
+    color: #fff;
+}
+
+.input-group input:focus::placeholder,
+.input-group input:focus {
+    color: var(--font-color);
+}
+
+.input-group input:focus ~ .input-group-append svg {
+    fill: var(--font-color);
 }
 
 .input-group-append {
-    margin: 0 !important;
+    margin: 0;
+    padding-left: 1rem;
 }
 
 .msg-updatetag {
@@ -707,10 +765,19 @@ td img {
     visibility: hidden;
 }
 
-.main-wrap.list-wrap {
+.list-wrap {
     width: 95%;
     padding-right: 0;
     padding-left: 0;
+    height: max-content;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.table-wrapper {
+    background: #fff;
+    padding: 2rem 0;
+    border-radius: 1rem;
 }
 
 .table-responsive::-webkit-scrollbar {
@@ -739,6 +806,21 @@ td img {
     background-color: #fff;
 }
 
+.error-wrap {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
+    font-weight: 400;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.error-wrap svg {
+    margin-right: .5rem;
+}
+
 @media screen and (max-width: 768px) {
     .tr-default {
         display: none;
@@ -757,12 +839,7 @@ td img {
         align-items: center;
     }
 
-    .main-wrap {
-        padding: 1.5rem;
-    }
-
     .input-group {
-        margin: 0 1rem 1rem;
         width: initial !important;
     }
 
