update UI + encrypt RSA/AES testing

--- a/resources/js/assets/styles/global.css
+++ b/resources/js/assets/styles/global.css
@@ -321,7 +321,7 @@ option {
 }
 
 .navigation-wrap {
-    background-color: #e6e6e6;
+    background-color: #ededed;
     padding: 0.5rem 1rem;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
